--- a/Tasks/02-task.html
+++ b/Tasks/02-task.html
@@ -35,11 +35,102 @@
             return color;
         }
 
-        let colorSampleDiv = document.querySelector("#color-sample"); 
+        let colorSampleDiv = document.querySelector("#color-sample");
         let info = getRandomColor()
         colorSampleDiv.style.backgroundColor = info;
-        let  colorText = document.querySelector("p"); 
-        colorText.textContent = "Цвет: " + info 
+        let colorText = document.querySelector("p");
+        colorText.textContent = "Цвет: " + info
+        /*Задание 1. Написать, программу, которая вычисляет при -
+    быль фирмы за 6 месяцев.Пользователь вводит прибыль
+   фирмы за каждый месяц.*/
+        /*const int size = 6;
+            int arr[size];
+               int sum = 0;
+      
+               for (int i = 0; i < size; i++)
+               {
+                   cout << "enter the company's profit for the month -> " << i + 1 << " -> ";
+                   cin >> arr[i];
+                   sum += arr[i];
+               }
+               for (int i = 0; i < size; i++)
+               {
+                   cout << arr[i] << "\t";
+               }
+               cout << endl;
+               cout << "sum = " << sum << endl;*/
+        /* Задание 2. Написать программу, которая выводит одно -
+                 мерный массив в обратном порядке.*/
+        //srand(time(NULL));
+        //const int SIZE = 6;
+        //int arr[SIZE]{};
+        //for (int i = 0; i < SIZE; i++)
+        //{
+        //    arr[i] = rand() % 100;
+        //}
+        //for (int i = 0; i < SIZE; i++) {
+        //    cout << arr[i] << " ";
+        //}
+        //cout << endl;
+        //for (int i = 0; i < SIZE; i++)
+        //{
+        //    cout << arr[i] << "\t";
+        //}
+        //cout << endl;
+        //for (int i = SIZE - 1; i >= 0; i--)
+        //{
+        //    cout << arr[i] << "\t";
+        //}
+
+        //Задание 3.
+        // Пользователь вводит длину сторон пятиугольника, каждая сторона заноситься в массив, необходимо  вычислить периметр пятиугольника (периметр — сумма всех сторон).
+
+        //const int SIZE = 5;
+        //int arr[SIZE];
+        //int P = 0;
+
+        //for (int i = 0; i < SIZE; i++)
+        //{
+        //    cout << "Enter -> " << i + 1 << " -> ";
+        //    cin >> arr[i];
+        //    P += arr[i]; //
+        //}
+        //for (int i = 0; i < SIZE; i++)
+        //{
+        //    cout << arr[i] << "\t";
+        //}
+        //cout << endl;
+        //cout << "P = " << P << endl;
+
+        //Задание 4. Пользователь вводит прибыль фирмы за год
+        //(12 месяцев).Необходимо определить месяц, в котором
+        //    прибыль была максимальна и месяц, в котором прибыль
+        //    была минимальна.
+        /*const int SIZE = 12;
+        int arr[SIZE];
+        int Suma = 0;
+        int max ,min ;
+        max = arr[0];
+        min = arr[0];
+        for (int i = 0; i < SIZE; i++)
+        {
+            cout << "Enter -> " << i + 1 << " -> ";
+            cin >> arr[i];
+            Suma += arr[i];
+            cout << arr[i] << "\t";
+            if (arr[i] > max)
+            {
+                max = arr[i];
+            }
+       
+            if (arr[i] < min)
+            {
+                min = arr[i];
+            }
+        }
+        cout << endl;
+        cout << "Suma = " << Suma << endl;
+        cout << "min:" << min << ", max:" << max;*/
     </script>
 </body>
 
