--- a/009-table-properties.html
+++ b/009-table-properties.html
@@ -74,6 +74,14 @@
         }
 
         output.textContent = sum;
+        output.style.color = "red";
+       table.rows[5].cells[0].style.backgroundColor = "yellow";
+       table.rows[6].cells[0].style.backgroundColor = "yellow";
+        table.rows[4].cells[0].style.backgroundColor = "green";
+         table.rows[3].cells[0].style.backgroundColor = "green";
+          table.rows[2].cells[0].style.backgroundColor = "green";
+           table.rows[1].cells[0].style.backgroundColor = "blue";
+          table.rows[0].cells[0].style.backgroundColor = "blue";
     </script>
 </body>
 
